# chifir

./: .gitignore  Cargo.toml  LICENSE  README.md  chifir.sixel
docs/: getting-started.md  opcodes.md
src/: assembly.rs  compiler.rs  computer.rs  lib.rs  machine.rs  main.rs  sixel.rs
